Fix rendering of some input buttons on iOS

--- a/css/barebones.css
+++ b/css/barebones.css
@@ -303,6 +303,8 @@ input[type="text"],
 input[type="tel"],
 input[type="url"],
 input[type="password"],
+input[type="button"],
+input[type="submit"],
 textarea {
   -webkit-appearance: none;
      -moz-appearance: none;
